# for display continuity sake please use 2 spaces instead of tabs

2012-10-14 mmichaud <michael.michaud@free.fr>
  * Add the capability to have dynamic attributes in a feature.
    Main modification is in FeatureSchema, but small modifications have also 
    been made in AbstractBasicFeature, BasicFeature and ViewSchemaPlugIn
  * Add BeanshellAttributeCalculatorPlugIn to the core.
    This plugin uses the new dynamic attribute capability
  
2012-10-10 mmichaud <michael.michaud@free.fr>
  * Fix bug 3525977 : PNG rasters with void pixels not displayed

2012-10-08 mmichaud <michael.michaud@free.fr>
  * Fix bug id 3570707 : LayerNameRenderer and Windows 7 issue (continue)
  * If OpenJUMP.exe has a single parameter and this parameter is a file 
    consider this is a project file and add -project automatically (this makes
    it possible to associate jmp file extension to OpenJUMP.exe)

2012-10-08 Matthias Scholz <ms@jammerhund.de>
  * fix bug 3575326 with the detachable frames and MosaicInternalFramesPlugIn.
  * cleanup import's and add @Override annotations in MosaicInternalFramesPlugIn

2012-10-08 mmichaud <michael.michaud@free.fr>
  * Fix bug 3575323 changed the whole layout of Attribute Calculator

2012-10-07 mmichaud <michael.michaud@free.fr>
  * Fix bug id 3571031 : Too long field names saved into dbf
  * Fix bug id 3570707 : LayerNameRenderer and Windows 7 issue (not finished)
  * Added a dummy reader as an attempt to solve bug 3446420 : Cannot open zipped 
    shapefile containing also xml

2012-10-02 mmichaud <michael.michaud@free.fr>
  * Make csv-driver compatible with SaveDatasetsPlugIn and improve exception 
    handling

2012-10-01 sstein <sstein@geo.uzh.ch>
  * New function "Tools>Edit Attributes>Join Table..." to attach attributes 
    from an one layer to another layer based on a unique ID field. 
    - new class: JoinTableFromExistingLayerPlugIn 

2012-10-01 mmichaud <michael.michaud@free.fr>