@@ -1,5 +1,8 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2012-10-21 mmichaud <michael.michaud@free.fr>
+  * Better separation of logic and UI in PlanarGraphPlugIn + some improvements 
+  
 2012-10-14 mmichaud <michael.michaud@free.fr>
   * Add the capability to have dynamic attributes in a feature.
     Main modification is in FeatureSchema, but small modifications have also 
